minor spacing fix

--- a/modules/base/frontend/stylesheets/main.scss
+++ b/modules/base/frontend/stylesheets/main.scss
@@ -15,7 +15,7 @@ body {
   a {
     color: $link-color-normal;
     text-decoration: none;
-    outline: 0;
+    text-decoration: none;
 
     &:hover {
       color: $link-color-hover;
